# ai-rganize

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
ai_rganize/: __init__.py  ai_client.py  ai_organizer.py  base_organizer.py  cli.py  core.py  file_analysis.py  organizers.py  permissions.py  permissions_cli.py  rate_limiting.py  rule_based_organizer.py  utils.py
ai_rganize/analyzers/: __init__.py  audio_analyzer.py  document_analyzer.py  image_analyzer.py  text_analyzer.py  video_analyzer.py
ai_rganize/organizer/: __init__.py  ai_organizer.py  base_organizer.py  rule_based_organizer.py
ai_rganize/prompts/: categorization.txt
ai_rganize/utils/: __init__.py  file_utils.py  metadata.py  utils.py
airganizer/: __init__.py  cli.py  core.py  permissions_cli.py
